k8s-deployments/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: cyberinnova.net
    http:
      paths:
        - path: /api/?(.*)
          pathType: Prefix
          backend:
            service:
              name: server-srv
              port:
                number: 4000
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: client-srv
              port:
                number: 3000
